correction overflow-x

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
 }
 
 .main {
-    height: 94vh;
-    overflow: scroll;
+    overflow-x: hidden;
 }
 /*---------------------------------------------------------------------------ANIMATION--------------------------------------------------------------------------------------------------------------*/
 @keyframes slideIn {
